@@ -1,9 +1,7 @@
 package com.knf.dev.librarymanagementsystem.controller;
 
-import java.util.Optional;
-import java.util.stream.Collectors;
-import java.util.stream.IntStream;
-
+import com.knf.dev.librarymanagementsystem.entity.Author;
+import com.knf.dev.librarymanagementsystem.service.AuthorService;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
@@ -13,8 +11,8 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 
-import com.knf.dev.librarymanagementsystem.entity.Author;
-import com.knf.dev.librarymanagementsystem.service.AuthorService;
+import java.util.Optional;
+import java.util.stream.IntStream;
 
 @Controller
 public class AuthorController {
@@ -24,7 +22,7 @@ public class AuthorController {
 	public AuthorController(AuthorService authorService) {
 		this.authorService = authorService;
 	}
-
+	private static final String AN_AUTHOR = "author";
 	@RequestMapping("/authors")
 	public String findAllAuthors(Model model, @RequestParam("page") Optional<Integer> page,
 			@RequestParam("size") Optional<Integer> size) {
@@ -37,7 +35,7 @@ public class AuthorController {
 
 		int totalPages = bookPage.getTotalPages();
 		if (totalPages > 0) {
-			var pageNumbers = IntStream.rangeClosed(1, totalPages).boxed().collect(Collectors.toList());
+			var pageNumbers = IntStream.rangeClosed(1, totalPages).boxed().toList();
 			model.addAttribute("pageNumbers", pageNumbers);
 		}
 		return "list-authors";
@@ -46,7 +44,7 @@ public class AuthorController {
 	@RequestMapping("/author/{id}")
 	public String findAuthorById(@PathVariable("id") Long id, Model model) {
 
-		model.addAttribute("author", authorService.findAuthorById(id));
+		model.addAttribute(AN_AUTHOR, authorService.findAuthorById(id));
 		return "list-author";
 	}
 
@@ -62,14 +60,14 @@ public class AuthorController {
 		}
 
 		authorService.createAuthor(author);
-		model.addAttribute("author", authorService.findAllAuthors());
+		model.addAttribute(AN_AUTHOR, authorService.findAllAuthors());
 		return "redirect:/authors";
 	}
 
 	@GetMapping("/updateAuthor/{id}")
 	public String showUpdateForm(@PathVariable("id") Long id, Model model) {
 
-		model.addAttribute("author", authorService.findAuthorById(id));
+		model.addAttribute(AN_AUTHOR, authorService.findAuthorById(id));
 		return "update-author";
 	}
 
@@ -81,7 +79,7 @@ public class AuthorController {
 		}
 
 		authorService.updateAuthor(author);
-		model.addAttribute("author", authorService.findAllAuthors());
+		model.addAttribute(AN_AUTHOR, authorService.findAllAuthors());
 		return "redirect:/authors";
 	}
 
@@ -89,7 +87,7 @@ public class AuthorController {
 	public String deleteAuthor(@PathVariable("id") Long id, Model model) {
 		authorService.deleteAuthor(id);
 
-		model.addAttribute("author", authorService.findAllAuthors());
+		model.addAttribute(AN_AUTHOR, authorService.findAllAuthors());
 		return "redirect:/authors";
 	}
 
